fix spacing before h3 appearing in home page

--- a/docs/_sass/minima/_base.scss
+++ b/docs/_sass/minima/_base.scss
@@ -38,15 +38,12 @@ p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
   margin-bottom: $spacing-unit / 2;
-  margin-top: $spacing-unit / 2;
+  // margin-top: $spacing-unit / 2;
 }
 
 // Target only post titles (assuming you're using Minima's structure)
 .post h1, .post-title, h1.post-title {
   font-size: 2rem; // ~32px
-  // line-height: 1.3;
-  // font-weight: 600;
-  // margin-bottom: 1rem;
 }
 
 /**
